--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-session": "^1.16.1"
   },
