--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
-    "express-session": "^1.16.1"
+    "express-session": "^1.16.1",
+    "mongoose": "^5.5.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
