--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt-nodejs": "0.0.3",
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
